test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing-deprecated/chainsaw-step-02-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foo
