test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing-deprecated/chainsaw-step-02-apply-1-2.yaml
apiVersion: v1
data:
  fookey: fakeval
kind: ConfigMap
metadata:
  labels:
    kyverno.io/watch: "true"
  name: mycm
  namespace: foo
