test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing-deprecated/chainsaw-step-02-apply-1-4.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unwatched
  namespace: foo
spec:
  containers:
  - command:
    - sleep
    - 1d
    image: busybox:1.35
    name: busybox
    volumeMounts:
    - mountPath: /etc/fooconfig
      name: othercm
  volumes:
  - configMap:
      name: othercm
    name: othercm
