test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing-deprecated/chainsaw-step-05-apply-1-1.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    corp.org/random: bar
  name: mypod
  namespace: foo
