test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing-deprecated/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: reload
spec:
  mutateExistingOnPolicyUpdate: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - ConfigMap
          selector:
            matchLabels:
              kyverno.io/watch: "true"
    mutate:
      patchStrategicMerge:
        metadata:
          annotations:
            corp.org/random: '{{ request.object.data.fookey }}'
        spec:
          volumes:
          - configMap:
              <(name): '{{ request.object.metadata.name }}'
      targets:
      - apiVersion: v1
        kind: Pod
        namespace: '{{ request.namespace }}'
    name: trigger
    preconditions:
      all:
      - key: '{{ request.operation }}'
        operator: Equals
        value: UPDATE
